[package]
name = "quicktok"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.0", features = ["rt-multi-thread", "process", "macros"] }
serenity = { version = "0.11.5", default-features = false, features = ["native_tls_backend", "client", "gateway", "http", "model"] }
anyhow = "1.0.64"
lazy_static = "1.4.0"
regex = "1.6.0"